test/spec_vectors/table_grow/ok/module_7.wat
(module $Tgit2 (import "grown-imported-table" "table" (table 3 funcref)) (func (export "size") (result i32) (table.size)))